--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
 
-    compile project(':poplib')
+    compile 'com.xyzlf.poplib:popcommon:0.0.1'
+
+//    compile project(':poplib')
 }
